manifests/checkmk/checkmk-server_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkmk
  name: checkmk
  namespace: checkmk
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 5000
  - port: 443
    name: https
    protocol: TCP
    targetPort: 5000
  selector:
    app: checkmk
  sessionAffinity: None
  type: NodePort
#  type: LoadBalancer
