manifests/checkmk/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: checkmk
  name: checkmk
  namespace: checkmk
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 5000
  - port: 443
    name: https
    protocol: TCP
    targetPort: 5000
  selector:
    app: checkmk
  sessionAffinity: None
#  type: LoadBalancer
  type: NodePort
#  type: ClusterIP
