manifests/checkmk/checkmk-server_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: checkmk
  namespace: checkmk
spec:
  rules:
    # Adapt to your own system
    - host: monitor.your.cluster
      http:
        paths:
          - path: /
            backend:
              serviceName: checkmk
              servicePort: 80
