manifests/checkmk/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: checkmk
spec:
  podSelector:
    matchLabels:
      name: checkmk
  ingress:
  - from:
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 5000
    - protocol: TCP
      port: 6556
  policyTypes:
  - Ingress
